Drop 1.15, 14, and 13 support. Java versions too old. Change some java version references to work on 1.16

--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,9 @@
     <groupId>com.njdaeger</groupId>
     <artifactId>EnhancedDebugStick</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <modules>
-        <module>eds-v113impl</module>
-        <module>eds-v114impl</module>
-        <module>eds-v115impl</module>
         <module>eds-v116impl</module>
         <module>eds-v117impl</module>
         <module>eds-v118impl</module>
@@ -31,8 +28,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
 
