--- a/eds-jar/pom.xml
+++ b/eds-jar/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eds-jar</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <dependencies>
         <dependency>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-core</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -34,43 +34,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-api</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.njdaeger</groupId>
-            <artifactId>eds-v113impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.njdaeger</groupId>
-            <artifactId>eds-v114impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.njdaeger</groupId>
-            <artifactId>eds-v115impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -82,7 +46,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v116impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -94,7 +58,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v117impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -106,7 +70,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v118impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -118,7 +82,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v119impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -130,7 +94,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v120impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -150,8 +114,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
 
