--- a/eds-v117impl/pom.xml
+++ b/eds-v117impl/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eds-v117impl</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-core</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-api</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
