--- a/eds-core/pom.xml
+++ b/eds-core/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>plugin-development-kit</artifactId>
-            <version>1.0.0-PRE</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
 
